# Projects

./: README.md  crewai_flow.html  pyproject.toml
src/career_selection_system/: main.py  main1.py
src/career_selection_system/crews/dev_crew/: dev_crew.py
src/career_selection_system/crews/dev_crew/config/: agents.yaml  tasks.yaml
